# waveshare_eink_2in13_v4_opi3b

./: .gitignore  CMakeLists.txt  README.md  gpio.md
examples/: main.c
lib/Config/: DEV_Config.c  DEV_Config.h  Debug.h  RPI_gpiod.c  RPI_gpiod.h  dev_hardware_SPI.h  dev_hardware_i2c.h
lib/Driver/: GT1151.c  GT1151.h  ICNT86X.h
lib/EPD/: EPD_2in13_V2.h  EPD_2in13_V3.h  EPD_2in13_V4.c  EPD_2in13_V4.h  EPD_2in9_V2.h
lib/Fonts/: fonts.h
lib/GUI/: GUI_BMPfile.h  GUI_Paint.h
